2009-02-24  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Alexey Proskuryakov.

        [Gtk] add options for 3D transforms and HTML5 channel messaging to the build
        https://bugs.webkit.org/show_bug.cgi?id=24072

        Allow toggling of 3D transforms and HTML5 channel messaging
        support for the Autotools (Gtk) build.

        Also add '--gtk' in the build-webkit help doc and fix autotools
        option for web-workers support.

        * Scripts/build-webkit:

2009-02-23  Xan Lopez  <xan@gnome.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=22624
        [SOUP][GTK] Need API to get SoupSession from WebKit.

        Add soup flags now that dependency is explicit.

        * GNUmakefile.am:

2009-02-22  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        Fix assertion failures in editing/pasteboard/paste-RTFD.html and editing/pasteboard/paste-TIFF.html in 64-bit.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (swizzleAllMethods): When adding a new method to a class, use the implementation and type of the new method rather
        than of an arbitrary existing method on the class.

2009-02-13  Eric Seidel  <eric@webkit.org>

        Rubber-stamped by Alexey Proskuryakov.

        Add a few ignores to make-js-test-wrappers.

        * Scripts/make-js-test-wrappers:

2009-02-17  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Alexey Proskuryakov.

        Prepend file:// to the test result filename to make
        GtkLauncher display the result page.

        * Scripts/run-webkit-tests:

2009-02-16  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Adam Roben

        Actually use the installation prefix defined in WebKitInstallationPrefix,
        in autotools builds.

        * Scripts/webkitdirs.pm:

2009-02-12  Simon Fraser  <simon.fraser@apple.com>

        No review.
